It is end to execution on socket